channel_playlist 레이아웃

--- a/public/channel_playlist.html
+++ b/public/channel_playlist.html
@@ -89,109 +89,78 @@
 				              </li>
 										</ul>
 								</nav>
+							</div>
 
-								<li id='liSearchOption'>
-										<div style=" margin:0px; float:left;">
-												<select id='selSearchOption' >
-														<option value='A'>최신순</option>
-														<option value='T'>조회순</option>
-														<option value='C'>추천순</option>
-												</select>
-
-										</div>
-								</li>
-
-
-								<div class="inner" >
-									<section>
-				  					<div class="" style="margin-top:5px; height:240px; position:relative; background-color:#F1F1F1 ">
-											<div class="image-container" style="height:200px; width:350px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px; position:absolute">
-												<a href="#" class="test"> <img src="https://ichef.bbci.co.uk/news/640/cpsprodpb/17805/production/_105016269_roxy1.jpg"></img> </a>
+								<section>
+										<div style="width:220px; height:250px; float:left; margin:20px">
+											<div class="image-container" style="height: 160px; width: 200px; float:left; overflow:hidden; display:flex; align-items:center; justify-content:center; margin:10px; ">
+												<a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU" style="display:block"></img></a>
 											</div>
-											<div style="height: 200px;left:350px; width:40%; position:absolute; margin:20px">
-					  						<a href="#" >
-													<h2 style="margin-top:10px; margin-left:10px">고양이 샤워시키는 방법</h2>
-												</a>
-												<p style="margin-left:10px;">조회수,추천수<br>
-													영상업로드날짜<br>
-												<a href="#">강의 자료 링크</a></p>
-
-												<div style="margin:10px" class="conatiner">
-													<div class="prog" style="background:#FFFFFF">
-														<div class="progs" id="progressing" style="width:0%; height:30px; background:#FF8080;color:#fff;text-align: center;line-height: 30px;" ></div>
-													</div>
-												</div>
-
-												<script>
-        									function moveBtn(){
-            							var ele=document.getElementById('progressing');
-            							var width = 5;
-            							var id =setInterval(frame, 45);
-            							function frame(){
-                						if(width>=100){
-                    					clearInterval(id);
-                						}else{
-                    					width ++;
-                    					ele.style.width=width+"%";
-                    					ele.innerHTML=width+"%";
-                							}
-            								}
-        									}
-    										</script>
-											</div>
-
-											<div style="height: 200px; width: 100px; float:right;margin:20px;">
-												<button style="margin-top:70px;" onClick="moveBtn()">test</button>
+											<div style="margin-left:10px; height:220px">
+												<a href="#" class="test" ><strong>재생목록</strong><br></a>동영상수
 											</div>
 										</div>
-									</section>
-
-									<section>
-				  					<div class="" style=" height:240px; position:relative; background-color:#F1F1F1 ">
-											<div class="image-container" style="height:200px; width:350px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px; position:absolute">
-												<a href="#" class="test"> <img src="https://ichef.bbci.co.uk/news/640/cpsprodpb/17805/production/_105016269_roxy1.jpg"></img> </a>
+										<div style="width:220px; height:250px; float:left; margin:20px">
+											<div class="image-container" style="height: 160px; width: 200px; float:left; overflow:hidden; display:flex; align-items:center; justify-content:center; margin:10px; ">
+												<a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU" style="display:block"></img></a>
 											</div>
-											<div style="height: 200px;left:350px; width:40%; position:absolute; margin:20px">
-					  						<a href="#" >
-													<h2 style="margin-top:10px; margin-left:10px">고양이 샤워시키는 방법</h2>
-												</a>
-												<p style="margin-left:10px;">조회수,추천수<br>
-														영상업로드날짜<br>
-													<a href="#">강의 자료 링크</a></p>
-
-												<div style="margin:10px" class="conatiner">
-													<div class="prog" style="background:#FFFFFF">
-														<div class="progs" id="progressing1" style="width:0%; height:30px; background:#FF8080;color:#fff;text-align: center;line-height: 30px;" ></div>
-													</div>
-												</div>
-
-												<script>
-        									function moveBtn1(){
-            							var ele=document.getElementById('progressing1');
-            							var width = 5;
-            							var id =setInterval(frame, 45);
-            							function frame(){
-                						if(width>=100){
-                    					clearInterval(id);
-                						}else{
-                    					width ++;
-                    					ele.style.width=width+"%";
-                    					ele.innerHTML=width+"%";
-                							}
-            								}
-        									}
-    										</script>
-											</div>
-
-											<div style="height: 200px; width: 100px; float:right;margin:20px;">
-												<button style="margin-top:70px;" onClick="moveBtn1()">test</button>
+											<div style="margin-left:10px; height:220px">
+											<a href="#" class="test" ><strong>재생목록</strong><br></a>동영상수
 											</div>
 										</div>
-									</section>
+										<div style="width:220px; height:250px; float:left; margin:20px">
+											<div class="image-container" style="height: 160px; width: 200px; float:left; overflow:hidden; display:flex; align-items:center; justify-content:center; margin:10px; ">
+												<a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU" style="display:block"></img></a>
+											</div>
+											<div style="margin-left:10px; height:220px">
+												<a href="#" class="test" ><strong>재생목록</strong><br></a>동영상수
+											</div>
+										</div>
+										<div style="width:220px; height:250px; float:left; margin:20px">
+											<div class="image-container" style="height: 160px; width: 200px; float:left; overflow:hidden; display:flex; align-items:center; justify-content:center; margin:10px; ">
+												<a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU" style="display:block"></img></a>
+											</div>
+											<div style="margin-left:10px; height:220px">
+												<a href="#" class="test" ><strong>재생목록</strong><br></a>동영상수
+											</div>
+										</div>
+										<div style="width:220px; height:250px; float:left; margin:20px">
+											<div class="image-container" style="height: 160px; width: 200px; float:left; overflow:hidden; display:flex; align-items:center; justify-content:center; margin:10px; ">
+												<a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU" style="display:block"></img></a>
+											</div>
+											<div style="margin-left:10px; height:220px">
+												<a href="#" class="test" ><strong>재생목록</strong><br></a>동영상수
+											</div>
+										</div>
+										<div style="width:220px; height:250px; float:left; margin:20px">
+											<div class="image-container" style="height: 160px; width: 200px; float:left; overflow:hidden; display:flex; align-items:center; justify-content:center; margin:10px; ">
+												<a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU" style="display:block"></img></a>
+											</div>
+											<div style="margin-left:10px; height:220px">
+												<a href="#" class="test" ><strong>재생목록</strong><br></a>동영상수
+											</div>
+										</div>
+										<div style="width:220px; height:250px; float:left; margin:20px">
+											<div class="image-container" style="height: 160px; width: 200px; float:left; overflow:hidden; display:flex; align-items:center; justify-content:center; margin:10px; ">
+												<a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU" style="display:block"></img></a>
+											</div>
+											<div style="margin-left:10px; height:220px">
+												<a href="#" class="test" ><strong>재생목록</strong><br></a>동영상수
+											</div>
+										</div>
+										<div style="width:220px; height:250px; float:left; margin:20px">
+											<div class="image-container" style="height: 160px; width: 200px; float:left; overflow:hidden; display:flex; align-items:center; justify-content:center; margin:10px; ">
+												<a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU" style="display:block"></img></a>
+											</div>
+											<div style="margin-left:10px; height:220px">
+												<a href="#" class="test" ><strong>재생목록</strong><br></a>동영상수
+											</div>
+										</div>
+
+							              </section>
 								</div>
 					</div>
-				</div>
-			</div>
+				
 
 			<div id="sidebar">
 			<div class="inner">
