--- a/public/channel_playlist2.html
+++ b/public/channel_playlist2.html
@@ -102,7 +102,10 @@
 								</li>
 
 
-								<div class="inner" >
+								<div class="inner">
+									<header class="major" style="margin-top:80px; height:30px">
+										<h2>재생목록</h2>
+									</header>
 									<section>
 				  					<div class="" style="margin-top:5px; height:240px; position:relative; background-color:#F1F1F1 ">
 											<div class="image-container" style="height:200px; width:350px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px; position:absolute">
