--- a/public/specboard.html
+++ b/public/specboard.html
@@ -14,15 +14,13 @@ function openWindowPop(url, name){
 </script>
 <style>
 body{
-        line-height:2em;
+
         font-family:"맑은 고딕";
 }
     ul, li{
         list-style:none;
-        text-align:center;
         padding:0;
         margin:0;
-				color:#3D4449
 }
 
     #mainWrapper{
@@ -159,37 +157,37 @@ body{
 									<!-- 게시물이 출력될 영역 -->
 									<li>
 											<ul>
-													<li>생활</li>
-													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
-													<li>2020.11.30</li>
-													<li>Lv0</liv>
+													<li style="text-align:center;">생활</li>
+													<li class="left" ><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
+													<li style="text-align:center;">2020.11.30</li>
+													<li style="text-align:center;">Lv0</liv>
 											</ul>
 									</li>
 
 									<li>
 											<ul>
-													<li>스포츠</li>
+													<li style="text-align:center;">스포츠</li>
 													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
-													<li>2020.11.30</li>
-													<li>Lv0</liv>
+													<li style="text-align:center;">2020.11.30</li>
+													<li style="text-align:center;">Lv0</liv>
 											</ul>
 									</li>
 
 									<li>
 											<ul>
-													<li>게임</li>
+													<li style="text-align:center;">게임</li>
 													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
-													<li>2020.11.30</li>
-													<li>Lv0</liv>
+													<li style="text-align:center;">2020.11.30</li>
+													<li style="text-align:center;">Lv0</liv>
 											</ul>
 									</li>
 
 									<li>
 											<ul>
-													<li>음악</li>
+													<li style="text-align:center;">음악</li>
 													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
-													<li>2020.11.30</li>
-													<li>Lv0</liv>
+													<li style="text-align:center;">2020.11.30</li>
+													<li style="text-align:center;">Lv0</liv>
 											</ul>
 									<li>
 							</ul>
