mychannel,subscribed_channel,video 레이아웃

--- a/public/specboard.html
+++ b/public/specboard.html
@@ -123,6 +123,8 @@ body{
 		</ul>
 
 	</header>
+	<div id="main">
+		<div class="inner">
 	<div margin-top:10px;>
 		<li id='liSearchOption'>
 				<div style="float:right; margin: 5px 5px 5px 5px">
@@ -135,7 +137,7 @@ body{
 				</div>
 		</li>
 	</div>
-	<div id="mainWrapper" sytle="width:800px; margin:0 auto;">
+	<div id="Wrapper" sytle="width:800px; margin:0 auto;">
 
 			<ul>
 					<!-- 게시판 제목 -->
@@ -217,7 +219,7 @@ body{
 
 
 
-
+</div></div>
 
 
 
