--- a/public/studyboard.html
+++ b/public/studyboard.html
@@ -125,6 +125,8 @@ body{
 		</ul>
 
 	</header>
+	<div id="main">
+		<div class="inner">
 	<div margin-top:10px;>
 		<li id='liSearchOption'>
 				<div style="float:right; margin: 5px 5px 5px 5px">
@@ -137,7 +139,7 @@ body{
 				</div>
 		</li>
 	</div>
-	<div id="mainWrapper" sytle="width:800px; margin:0 auto;">
+	<div id="Wrapper" sytle="width:800px; margin:0 auto;">
 
 			<ul>
 					<!-- 게시판 제목 -->
@@ -230,7 +232,7 @@ body{
 
 
 
-
+</div></div>
 
 
 
