mychannel,subscribed_channel 등 레이아웃

--- a/public/mychannel.html
+++ b/public/mychannel.html
@@ -59,7 +59,14 @@ window.addEventListener("message", function(event){
     <header class="major">
       <h2>내 채널 관리</h2>
     </header>
-    <div class="" style=" margin:0 auto%; height: 250px; position:relative; ">
+				<div style="margin-left:40%" >
+					<ul class="actions"  >
+						<li><a href="#" class="button">+새 채널 생성</a></li>
+					</ul>
+				</div>
+	</section>
+	<section>
+    <div class="" style=" margin:0 auto; height: 250px; position:relative; ">
 
   <!-- Section -->
 
@@ -73,7 +80,7 @@ window.addEventListener("message", function(event){
         <p style="margin-left:15px">구독자수, 영상수</p>
       </div>
 
-      <div style="height: 240px; margin:20px; float:right; width:300px; width:20%">
+      <div style="height: 240px; margin:10px; float:right; width:300px; width:20%">
         <ul class="actions" style="margin-top:85px;" >
           <li><a href="#" class="button" >관리</a></li>
           <li><a href="#" class="button">삭제</a></li>
@@ -96,7 +103,7 @@ window.addEventListener("message", function(event){
         <p style="margin-left:15px">구독자수, 영상수</p>
       </div>
 
-      <div style="height: 240px; margin:20px; float:right; width:300px; width:20%">
+      <div style="height: 240px; margin:10px; float:right; width:300px; width:20%">
         <ul class="actions" style="margin-top:85px;" >
           <li><a href="#" class="button" >관리</a></li>
           <li><a href="#" class="button">삭제</a></li>
