--- a/public/channel_select.html
+++ b/public/channel_select.html
@@ -7,9 +7,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../html5up-editorial\assets\css\main.css" />
 
+
+
 	</head>
 	<body class="is-preload">
 
+
+<div > </div>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -35,7 +39,8 @@
 	</header>
 
 		<div id="main">
-			<div class="inner">
+			<div class="inne" >
+
 				<section>
 					<div class="" style=" margin-left:8%; height: 250px; position:relative; ">
 
@@ -46,19 +51,20 @@
 						</div>
 						<div style="height: 210px; width: 400px; left:280px; width:30%; position:absolute;margin:20px;">
 							<a href="channel_private.html">
-								<h2 style="margin-top:40px; margin-left:15px">고양이채널</h2>
+								<h2 style="margin-top:40px; margin-left:15px" id="select_channl_name">고양이채널</h2>
 							</a>
 							<p style="margin-left:15px">구독자수, 영상수<br>
 							<a href="#">채널주인스펙확인</a></p>
 						</div>
 
-						<div style="height: 210px; margin:20px; float:right; width:300px; width:20%">
+						<div style="height: 210px; margin:20px; float:right; width:300px; width:20%" >
 							<ul class="actions" style="margin-top:85px;" >
 								<li><a href="#" class="button">구독</a></li>
 							</ul>
 						</div>
 					</div>
 				</section>
+
 
 				<section>
 					<div class="" style=" margin-left:8%; height: 250px; position:relative; ">
@@ -181,11 +187,145 @@
 
 
 
+
 		<!-- Scripts 아직뭔지 모르겠음-->
     <script src="../html5up-editorial/assets/js/jquery.min.js"></script>
     <script src="../html5up-editorial/assets/js/browser.min.js"></script>
     <script src="../html5up-editorial/assets/js/breakpoints.min.js"></script>
     <script src="../html5up-editorial/assets/js/util.js"></script>
     <script src="../html5up-editorial/assets/js/main.js"></script>
+
+
+		<script src="/__/firebase/8.1.1/firebase-app.js"></script>
+		<script src="/__/firebase/8.1.1/firebase-storage.js"></script>
+		<!-- Initialize Firebase -->
+		<script src="/__/firebase/init.js"></script>
+		<script src="../../openPopup.js"></script>
+
+				<script>
+					// Your web app's Firebase configuration
+					// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+					var firebaseConfig = {
+						apiKey: "AIzaSyDwMYnkiXywcpwhC8OX0iQGHRwdZLnEm2o",
+						authDomain: "webproject-f85df.firebaseapp.com",
+						databaseURL: "https://webproject-f85df.firebaseio.com",
+						projectId: "webproject-f85df",
+						storageBucket: "webproject-f85df.appspot.com",
+						messagingSenderId: "505722645824",
+						appId: "1:505722645824:web:8edc2cb13f06ccf175dea5",
+						measurementId: "G-HFWKZR7F96"
+					};
+					// Initialize Firebase
+					if (firebase.apps.length === 0) {
+					firebase.initializeApp(firebaseConfig);
+				}
+				</script>
+				<script>
+				var storageRef = firebase.storage().ref();
+				var dataRef = firebase.database().ref();
+				var pathRef = storageRef.child('basketball_1.jpg');
+
+				function downImgURL(){pathRef.getDownloadURL().then(function(url){
+					var imgPath=url;
+					console.log(imgPath);
+				}).catch(function(error){
+					alert(error.message);
+				});
+
+				}
+			</script>
+
+			<script type="text/javascript" charset="utf-8">
+			    var Request = function() {
+			        this.getParameter = function(name) {
+			            var rtnval = '';
+			            var nowAddress = unescape(location.href);
+			            var parameters = (nowAddress.slice(nowAddress.indexOf('?') + 1,
+			                    nowAddress.length)).split('&');
+			            for (var i = 0; i < parameters.length; i++) {
+			                var varName = parameters[i].split('=')[0];
+			                if (varName.toUpperCase() == name.toUpperCase()) {
+			                    rtnval = parameters[i].split('=')[1];
+			                    break;
+			                }
+			            }
+			            return rtnval;
+			        }
+			    }
+			    var request = new Request();
+			</script>
+
+<script>
+function search_channel() {
+
+
+var chNamee =  request.getParameter("query") ;
+//if(chNamee != null) {chNamee = new String (chNamee.getBytes("8859_1"), "EUC-KR");}
+
+var searchChannelName = request.getParameter("query") ;
+//var searchChannelName = document.getElementById("query").value;
+
+
+
+// var searchref = db.ref(value);
+
+firebase.database().ref("testsearch").startAt(searchChannelName).on('child_add',function(snapshot){
+	document.getElementById("select_channl_name").textContent = "잘못된 검색";
+if(snapshot.val() ) {
+var chName = snapshot.key;
+var chVideoNum = snapshot.val().videonum;
+var chSubscribe = snapshot.val().subscribe;
+var chImg = snapshot.val().channel_img_ref;
+var chLink = snapshot.val().channel_ref;
+
+document.getElementById("select_channl_name").textContent = chNamee;
+//document.getElementById("select_channl_link").href = chLink ;
+//document.getElementById("select_channl_video").img = chImg;
+//document.getElementById("select_channl_name").textContent = chName;
+//document.getElementById("select_channl_videonum").textContent = "조회수 : "+ chVideoNum + " 구독자수 : "+ chSubscribe ;
+
+
+var channel_select_page =
+"<section>"
+	"<div class=\"\" style=\" margin-left:8%; height: 250px; position:relative; \">"
+
+		"<div class=\"image-container\" style=\"height: 210px; width: 280px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px\">"
+			"<a href="+ chLink + " class=\"test\"> <img src="+ chImg + "></img> </a>"
+		"</div>"
+		"<div style=\"height: 210px; width: 400px; left:280px; width:30%; position:absolute;margin:20px;\">"
+			"<a href="+ chLink + ">"
+				"<h2 style=\"margin-top:40px; margin-left:15px\">"+ chName + "</h2>"
+			"</a>"
+			"<p style=\"margin-left:15px\"> 구독자수: " +chSubscribe + " 영상수: "+ chVideoNum + "<br>"
+			"<a href=\"#\">채널주인스펙확인</a></p>"
+		"</div>"
+
+		"<div style=\"height: 210px; margin:20px; float:right; width:300px; width:20%\">"
+			"<ul class=\"actions\" style=\"margin-top:85px;\" >"
+				"<li><a href=\"#\" class=\"button\">구독</a></li>"
+			"</ul>"
+		"</div>"
+	"</div>"
+"</section>";
+
+$(".inne").append(channel_select_page);
+
+}
+else {
+document.getElementById("select_channl_name").textContent = "잘못된 검색";
+}
+
+} );
+}
+
+
+</script>
+
+
+
+<script>	search_channel(); </script>
+
+
+
 	</body>
 </html>
