--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@ window.addEventListener("message", function(event){
 								<section>
 
 									<header class="major">
-										<h2>인기 영상</h2>
+										<h2>인기 영상</h2><a href="testpage/testpage1.html" class="button">test</a>
 									</header>
 									<span style="float:right">
 										<ul class="actions">
@@ -178,7 +178,7 @@ window.addEventListener("message", function(event){
 				              <li><a href="categories/game/cartrider.html">카트라이더</a></li>
 				            </ul>
 				          </li>
-									<li><a href="index.html">스터디게시판</a></li>
+									<li><a href="studyboard.html">스터디게시판</a></li>
 
 				        </ul>
 				      </nav>
