--- a/public/channel_select.html
+++ b/public/channel_select.html
@@ -40,6 +40,7 @@
 
 		<div id="main">
 			<div class="inne" >
+				<div class= "nnnn"> n</div>
 
 				<section>
 					<div class="" style=" margin-left:8%; height: 250px; position:relative; ">
@@ -196,9 +197,10 @@
     <script src="../html5up-editorial/assets/js/main.js"></script>
 
 
-		<script src="/__/firebase/8.1.1/firebase-app.js"></script>
-		<script src="/__/firebase/8.1.1/firebase-storage.js"></script>
-		<!-- Initialize Firebase -->
+		<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-database.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-storage.js"></script>
 		<script src="/__/firebase/init.js"></script>
 		<script src="../../openPopup.js"></script>
 
@@ -264,13 +266,27 @@ var chNamee =  request.getParameter("query") ;
 
 var searchChannelName = request.getParameter("query") ;
 //var searchChannelName = document.getElementById("query").value;
-
+	//document.getElementById("select_channl_name").textContent = searchChannelName;
 
 
 // var searchref = db.ref(value);
 
-firebase.database().ref("testsearch").startAt(searchChannelName).on('child_add',function(snapshot){
-	document.getElementById("select_channl_name").textContent = "잘못된 검색";
+/*
+firebase.database().ref("testsearch").orderByKey().startAt(searchChannelName).on("value",function(snapshot){
+	if(snapshot.val()){
+	var searchfullname = snapshot.key;
+	document.getElementById("select_channl_name").textContent = searchfullname;
+}
+else{
+	document.getElementById("select_channl_name").textContent = "안됨";
+}
+});
+*/
+
+firebase.database().ref("testsearch/"+searchChannelName).once('value').then(function(snapshot){
+
+//firebase.database().ref("testsearch/"+searchChannelName).startAt(searchChannelName).on('value',function(snapshot){
+
 if(snapshot.val() ) {
 var chName = snapshot.key;
 var chVideoNum = snapshot.val().videonum;
@@ -278,34 +294,38 @@ var chSubscribe = snapshot.val().subscribe;
 var chImg = snapshot.val().channel_img_ref;
 var chLink = snapshot.val().channel_ref;
 
-document.getElementById("select_channl_name").textContent = chNamee;
+document.getElementById("select_channl_name").textContent = chName;
 //document.getElementById("select_channl_link").href = chLink ;
 //document.getElementById("select_channl_video").img = chImg;
 //document.getElementById("select_channl_name").textContent = chName;
 //document.getElementById("select_channl_videonum").textContent = "조회수 : "+ chVideoNum + " 구독자수 : "+ chSubscribe ;
 
+var testdocm =" nnnnnnnnnnnnnnnn ";
+
+
+
+
 
 var channel_select_page =
-"<section>"
-	"<div class=\"\" style=\" margin-left:8%; height: 250px; position:relative; \">"
+"<section>"+
+	"<div class=\"\" style=\" margin-left:8%; height: 250px; position:relative; \">"+
 
-		"<div class=\"image-container\" style=\"height: 210px; width: 280px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px\">"
-			"<a href="+ chLink + " class=\"test\"> <img src="+ chImg + "></img> </a>"
-		"</div>"
-		"<div style=\"height: 210px; width: 400px; left:280px; width:30%; position:absolute;margin:20px;\">"
-			"<a href="+ chLink + ">"
-				"<h2 style=\"margin-top:40px; margin-left:15px\">"+ chName + "</h2>"
-			"</a>"
-			"<p style=\"margin-left:15px\"> 구독자수: " +chSubscribe + " 영상수: "+ chVideoNum + "<br>"
-			"<a href=\"#\">채널주인스펙확인</a></p>"
-		"</div>"
-
-		"<div style=\"height: 210px; margin:20px; float:right; width:300px; width:20%\">"
-			"<ul class=\"actions\" style=\"margin-top:85px;\" >"
-				"<li><a href=\"#\" class=\"button\">구독</a></li>"
-			"</ul>"
-		"</div>"
-	"</div>"
+		"<div class=\"image-container\" style=\"height: 210px; width: 280px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px\">"+
+			"<a href="+ chLink + " class=\"test\"> <img src="+ chImg + "></img> </a>"+
+		"</div>"+
+		"<div style=\"height: 210px; width: 400px; left:280px; width:30%; position:absolute;margin:20px;\">"+
+			"<a href="+ chLink + ">"+
+				"<h2 style=\"margin-top:40px; margin-left:15px\">"+ chName + "</h2>"+
+			"</a>"+
+			"<p style=\"margin-left:15px\"> 구독자수: " +chSubscribe + " 영상수: "+ chVideoNum + "<br>"+
+			"<a href=\"#\">채널주인스펙확인</a></p>"+
+		"</div>"+
+		"<div style=\"height: 210px; margin:20px; float:right; width:300px; width:20%\">"+
+			"<ul class=\"actions\" style=\"margin-top:85px;\" >"+
+				"<li><a href=\"#\" class=\"button\">구독</a></li>"+
+			"</ul>"+
+		"</div>"+
+	"</div>"+
 "</section>";
 
 $(".inne").append(channel_select_page);
@@ -313,6 +333,7 @@ $(".inne").append(channel_select_page);
 }
 else {
 document.getElementById("select_channl_name").textContent = "잘못된 검색";
+
 }
 
 } );
