--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,40 @@ window.addEventListener("message", function(event){
 		</section>
 
 		<ul class="icons">
-			<li><a href="javascript:openWindowPop('login.html', 'popup');" class="fa fa-user-circle fa-lg"><span id="loginBtn" class="label" style="color:#3D4449"> 로그인</span></a></li>
+			<li>
+				<a href="javascript:openWindowPop('login.html', 'popup');" class="fa fa-user-circle fa-lg">
+				<span id="loginBtn" class="label" style="color:#3D4449">
+					<a id="logURL" href="javascript:openWindowPop('login.html', 'popup');">
+						로그인
+					</a>
+					</span>
+				<script>
+				switch (localStorage.getItem("logined")) {
+					case 'logined':
+						document.getElementById("logURL").innerHTML="마이페이지";
+						document.getElementById("logURL").setAttribute('href', 'mychannel.html');
+						break;
+					case '':
+						document.getElementById("logURL").innerHTML="로그인";
+						document.getElementById("logURL").setAttribute('href', "javascript:openWindowPop('login.html', 'popup');");
+						break;
+					default:
+
+				}
+				/*
+				if(localStorage.getItem("logined") && localStorage.getItem("logouted")=='' ){
+	          document.getElementById("logURL").innerHTML="마이페이지";
+						document.getElementById("logURL").setAttribute('href', 'mychannel.html');
+
+	        }
+					if(localStorage.getItem("logouted") && localStorage.getItem("logined")==''){
+	          document.getElementById("logURL").innerHTML="로그인";
+						document.getElementById("logURL").setAttribute('href', "javascript:openWindowPop('login.html', 'popup');");
+	        }
+					*/
+				</script>
+			</a>
+		</li>
 		</ul>
 
 	</header>
